# IBERT

./: .gitignore  README.md  convert_vit_to_onnx.py  pyproject.toml  requirements.txt  run_experiments.py  run_ibert_quantization.py  save_onnx.py  save_quantized.py  setup.py  test_quantization_performance.py
IbertPaper/: _main.bbl  _main.bib  _main.tex  _s0_abstract.tex  _s1_intro.tex  _s2_related_work.tex  _s3_method.tex  _s4_results.tex  _s5_discussion.tex  _s6_conclusion.tex  _s7_appendix.tex  algorithmic.sty  macros.tex  math_commands.tex  packages.tex
docs/: index.rst  vision_transformer_quantization.rst
examples/vision_transformer/: README.md  check.py  save_torch.py  summary.py  test_ibert.py  test_vit_quantization.py  test_with_image.py
fairseq/models/: vit_quantization.py
fairseq/modules/quantization/scalar/: ops.py
fairseq/quantization/utils/: quant_modules.py  quant_utils.py
